fix search panel top on small screens

--- a/UI/styles.css
+++ b/UI/styles.css
@@ -111,10 +111,12 @@ body {
     flex-direction: row;
     position: fixed;
     z-index: 2;
-    width: 100%;
+    left: 0;
+    right: 0;
     background-color: white;
     font-size: 0.8em;
     border-bottom: 2px solid silver;
+    text-align: center;
 }
 
 .menu {
@@ -163,7 +165,6 @@ body {
     align-items: center;
     border: 0;
     position: relative;
-    /* border-bottom: 2px solid silver; */
 }
 
 .search__field {
@@ -187,7 +188,7 @@ body {
     border-top: 0;
     right: 0;
     padding: 0.2em;
-    border-radius: 0.2em;
+    border-radius: 0 0 0.2em 0.2em;
 }
 
 .search:hover .search__panel{
@@ -286,6 +287,12 @@ body {
     justify-content: space-between;
 }
 
+@media (max-width:372px) {
+    .search__panel {
+        top: calc(3em + 2px);
+    }
+}
+
 @media (min-width:760px) {
     .sidebar {
         width: auto;
@@ -293,6 +300,8 @@ body {
         margin-left: 0.5em;
         font-size: 1em;
         border-bottom: 0;
+        left: auto;
+        right: auto;
     }
 
     .main {
